chore: migrate to Java 8 from Java 17