@@ -5,6 +5,8 @@ import static org.assertj.core.api.Assertions.assertThat;
 import com.model2.mvc.common.db.SQLName;
 import org.junit.Test;
 
+import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.List;
 import java.util.stream.Stream;
 
@@ -30,19 +32,19 @@ public class TestListPageUtil {
         int pageSize = 10;
         int pageSetDisplay = 10;
         TestCase[] testCases = {
-                new TestCase(0, 1, pageSize, pageSetDisplay, List.of()),
-                new TestCase(0, 3, pageSize, pageSetDisplay, List.of()),
-                new TestCase(300, 30, pageSize, pageSetDisplay, List.of(21, 22, 23, 24, 25, 26, 27, 28, 29, 30)),
-                new TestCase(307, 30, pageSize, pageSetDisplay, List.of(21, 22, 23, 24, 25, 26, 27, 28, 29, 30)),
-                new TestCase(307, 31, pageSize, pageSetDisplay, List.of(31)),
-                new TestCase(307, 35, pageSize, pageSetDisplay, List.of(31)),
-                new TestCase(307, 40, pageSize, pageSetDisplay, List.of(31)),
-                new TestCase(307, 41, pageSize, pageSetDisplay, List.of()),
-                new TestCase(37, 4, pageSize, pageSetDisplay, List.of(1, 2, 3, 4)),
-                new TestCase(7, 1, pageSize, pageSetDisplay, List.of(1)),
-                new TestCase(13, 1, pageSize, pageSetDisplay, List.of(1, 2)),
-                new TestCase(13, 2, pageSize, pageSetDisplay, List.of(1, 2)),
-                new TestCase(108, 11, 3, 10, List.of(11, 12, 13, 14, 15, 16, 17, 18, 19, 20))
+                new TestCase(0, 1, pageSize, pageSetDisplay, new ArrayList<>()),
+                new TestCase(0, 3, pageSize, pageSetDisplay, new ArrayList<>()),
+                new TestCase(300, 30, pageSize, pageSetDisplay, Arrays.asList(21, 22, 23, 24, 25, 26, 27, 28, 29, 30)),
+                new TestCase(307, 30, pageSize, pageSetDisplay, Arrays.asList(21, 22, 23, 24, 25, 26, 27, 28, 29, 30)),
+                new TestCase(307, 31, pageSize, pageSetDisplay, Arrays.asList(31)),
+                new TestCase(307, 35, pageSize, pageSetDisplay, Arrays.asList(31)),
+                new TestCase(307, 40, pageSize, pageSetDisplay, Arrays.asList(31)),
+                new TestCase(307, 41, pageSize, pageSetDisplay, Arrays.asList()),
+                new TestCase(37, 4, pageSize, pageSetDisplay, Arrays.asList(1, 2, 3, 4)),
+                new TestCase(7, 1, pageSize, pageSetDisplay, Arrays.asList(1)),
+                new TestCase(13, 1, pageSize, pageSetDisplay, Arrays.asList(1, 2)),
+                new TestCase(13, 2, pageSize, pageSetDisplay, Arrays.asList(1, 2)),
+                new TestCase(108, 11, 3, 10, Arrays.asList(11, 12, 13, 14, 15, 16, 17, 18, 19, 20))
         };
 
         return Stream.of(testCases);
